# Casino-Donat-TgBot

./: .clang-format  .gitignore  CMakeLists.txt  Chat.cpp  Chat.h  Color.cpp  Color.h  Game.cpp  Game.h  GameEventHandler.cpp  GameEventHandler.h  GameManager.cpp  GameManager.h  Globals.cpp  Globals.h  Names.cpp  Names.h  Person.cpp  Person.h  PersonEventHandler.cpp  PersonEventHandler.h  PersonManager.cpp  PersonManager.h  README.md  Time.cpp  Time.h  concurrent_queue.h  main.cpp  rand.cpp  rand.h
